# solar-panel-coverage-nrw

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: image-build.yml  python-app.yml
notebooks/: determine_tiles.ipynb  evaluate_segmentation.ipynb  read_lidar_points.ipynb  read_tiles.ipynb  run_model.ipynb
orchestration/: run_azure_batch.py
scripts/: download_data.py  extract_html_table.py  run_full_pipeline.sh  train_model_cli.py  upload_to_blob_storage.py
src/: tile_management.py  transform.py  utils.py
src/building_finder/: __init__.py  cli.py  extract_buildings.py
src/dataset_creation/: create_dataset_cli.py
src/energy_extractor/: cli.py  energy_extraction.py
src/image_cropper/: __init__.py  cli.py  crop_images.py  utils.py
src/information_fusion/: cli.py  information_fusion.py
src/segmentation/: dataset.py  model.py
src/segmentation_benchmark/: benchmark.py
src/segmentation_model/: __init__.py  augmentations.py  dataset.py  model.py  training.py
src/utils/: __init__.py  azure.py  logging.py  opengeodata_nrw.py  tile_management.py  transform.py  utils.py
tests/: test_extract_buildings.py  test_tile_management.py
tests/segmentation_benchmark/: test_benchmark.py
tools/: extract_buildings.py
